<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Spinner
            android:id="@+id/soundSpn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/sound_spn_items"
            android:prompt="@string/sound_spn_prompt" />
        
        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play"
            android:onClick="play" />
        
    </LinearLayout>
    
    <TableLayout
        android:id="@+id/eq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1" >
        
        <TableRow>
            <TextView
                android:id="@+id/eqPresetText"
                android:text="@string/eqpreset_text"
                android:gravity="center" />
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/eqPresetSpn"
                android:prompt="@string/eqpreset_spn_prompt" />
        </TableRow>
        
    </TableLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/reverbText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reverb_text" />
        
        <Spinner
            android:id="@+id/reverbSpn"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/reverb_spn_items"
            android:prompt="@string/reverb_spn_prompt" />
        
    </LinearLayout>

</LinearLayout>